Implement task 6 - allow to filter by multiple authors/categories
