# books_service/docs/swagger.json
@@ -195,12 +195,9 @@
                 }
             }
         },
-        "/filter-by-author/{author_uuid}": {
-            "get": {
+        "/filter-by-author": {
+            "post": {
                 "description": "shows the basic data of books by author",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -208,10 +205,10 @@
                 "operationId": "filter-by-author",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Author uuid",
-                        "name": "author_uuid",
-                        "in": "path",
+                        "type": "string",
+                        "description": "String with author uuids, divided by comma",
+                        "name": "author_uuids",
+                        "in": "formData",
                         "required": true
                     }
                 ],
@@ -225,12 +222,9 @@
                 }
             }
         },
-        "/filter-by-category/{category_uuid}": {
-            "get": {
+        "/filter-by-category": {
+            "post": {
                 "description": "shows the basic data of books by category",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -238,10 +232,10 @@
                 "operationId": "filter-by-category",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Category uuid",
-                        "name": "category_uuid",
-                        "in": "path",
+                        "type": "string",
+                        "description": "String with category uuids, divided by comma",
+                        "name": "category_uuids",
+                        "in": "formData",
                         "required": true
                     }
                 ],
